--- a/index.html
+++ b/index.html
@@ -3,7 +3,34 @@ layout: default
 ---
 
 <div class="home">
-    <div class="banner-text">
-        We build robots.
+    <div class="main-header">
+      <h1>We build robots.</h1>
     </div>
+    <div class="body-text"></div>
+    <div class="main-header">
+      <h1>You can too.</h1>
+    </div>
+    <div class="body-text">
+      <p>Join us! Regardless of how much experience you have, we have a team for you.</p>
+      <!-- EMAIL FORM -->
+    </div>
+    <div class="main-header">
+      <h1>Our teams</h1>
+    </div>
+    <!-- Uber hover effect -->
+    <div class="teams">
+      <div class="team-row first-row">
+        <div class="team-box"><a href="/teams/art">ART</a></div>
+        <div class="team-box"><a href="/teams/combat">Combat</a></div>
+        <div class="team-box"><a href="/teams/3dp">3-D Printing</a></div>
+      </div>
+      <div class="team-row second-row">
+        <div class="team-box"><a href="/teams/sumo">Sumo</a></div>
+        <div class="team-box"><a href="/teams/shh">Top Secret</a></div>
+      </div>
+    </div>
+    <div class="main-header">
+      <h1>Questions?</h1>
+    </div>
+    <p>Hit us up <a href="mailto:utra@utra.ca">here</a> anytime.</p>
 </div>
