Added signup form

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
     <div class="body-text">
       <p>Join us! Regardless of how much experience you have, we have a team for you.</p>
       <!-- EMAIL FORM -->
+      {% include signup.html %}
     </div>
     <div class="main-header">
       <h1>Our teams</h1>
@@ -32,5 +33,13 @@ layout: default
     <div class="main-header">
       <h1>Questions?</h1>
     </div>
-    <p>Hit us up <a href="mailto:utra@utra.ca">here</a> anytime.</p>
+    <p>For general questions, hit us up <a href="mailto:utra@utra.ca">here</a> anytime.</p>
+    <p>Team specific questions:</p>
+    <ul>
+      <li><a href="mailto:art@utra.ca">ART</a></li>
+      <li><a href="mailto:combat@utra.ca">Combat</a></li>
+      <li><a href="mailto:3dp@utra.ca">3-D Printing</a></li>
+      <li><a href="mailto:sumo@utra.ca">Sumo</a></li>
+      <li><a href="mailto:topsecret@utra.ca">Top Secret</a></li>
+    </ul>
 </div>
