More work on homepage, added filler text/fixed spacing, started work on sponsor page

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@ layout: default
     <div class="main-header">
       <h1>We build robots.</h1>
     </div>
-    <div class="body-text"></div>
+    <div class="section-body">
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla velit nunc, vehicula at ligula nec, consequat rhoncus leo. Duis nec sapien id purus hendrerit imperdiet ut ut arcu. Nunc ut interdum metus, eu efficitur ipsum. Fusce gravida nulla nibh, quis ultricies quam lobortis ac. Nullam congue nulla a aliquet blandit. Donec iaculis tristique nunc et pretium. Vestibulum eu lorem sed turpis egestas consequat eget quis felis. Nullam semper enim vitae euismod scelerisque. Integer luctus dapibus massa, vitae efficitur elit mattis et. Nulla eget mi non nisl suscipit vestibulum sed consectetur sapien. Vivamus luctus odio ut urna tristique ultrices.
+    </p>
+    </div>
     <div class="main-header">
       <h1>You can too.</h1>
     </div>
-    <div class="body-text">
+    <div class="section-body">
       <p>Join us! Regardless of how much experience you have, we have a team for you.</p>
       <!-- EMAIL FORM -->
       {% include signup.html %}
@@ -18,23 +22,25 @@ layout: default
     <div class="main-header">
       <h1>Our teams</h1>
     </div>
+    <div class="section-body">
     <!-- Uber hover effect -->
-    <div class="teams">
-      <div class="team-row first-row">
-        <div class="team-box"><a href="/teams/art">ART</a></div>
-        <div class="team-box"><a href="/teams/combat">Combat</a></div>
-        <div class="team-box"><a href="/teams/3dp">3-D Printing</a></div>
-      </div>
-      <div class="team-row second-row">
-        <div class="team-box"><a href="/teams/sumo">Sumo</a></div>
-        <div class="team-box"><a href="/teams/shh">Top Secret</a></div>
+      <div class="teams">
+        <div class="team-row first-row">
+          <div class="team-box"><a href="/teams/art">ART</a></div>
+          <div class="team-box"><a href="/teams/combat">Combat</a></div>
+          <div class="team-box"><a href="/teams/3dp">3-D Printing</a></div>
+        </div>
+        <div class="team-row second-row">
+          <div class="team-box"><a href="/teams/sumo">Sumo</a></div>
+          <div class="team-box"><a href="/teams/shh">Top Secret</a></div>
+        </div>
       </div>
     </div>
     <div class="main-header">
       <h1>Questions?</h1>
     </div>
     <p>For general questions, hit us up <a href="mailto:utra@utra.ca">here</a> anytime.</p>
-    <p>Team specific questions:</p>
+    <p>For team specific questions:</p>
     <ul>
       <li><a href="mailto:art@utra.ca">ART</a></li>
       <li><a href="mailto:combat@utra.ca">Combat</a></li>
