Added some more sponsors, semi-did uber effect on teams

--- a/index.html
+++ b/index.html
@@ -26,13 +26,25 @@ layout: default
     <!-- Uber hover effect -->
       <div class="teams">
         <div class="team-row first-row">
-          <div class="team-box"><a href="/teams/art">ART</a></div>
-          <div class="team-box"><a href="/teams/combat">Combat</a></div>
-          <div class="team-box"><a href="/teams/3dp">3-D Printing</a></div>
+          <div class="team-box art">
+            <a href="/teams/art">ART</a>
+          </div>
+          <div class="team-box combat">
+            <a href="/teams/combat">Combat</a>
+          </div>
+          <div class="team-box three-d-p">
+            <a href="/teams/3dp">3-D Printing</a>
+          </div>
         </div>
         <div class="team-row second-row">
-          <div class="team-box"><a href="/teams/sumo">Sumo</a></div>
-          <div class="team-box"><a href="/teams/shh">Top Secret</a></div>
+          <div class="team-box sumo">
+            <a href="/teams/sumo">Sumo</a>
+          </div>
+          <div class="team-box topsecret">
+            <a href="/teams/shhh">
+              <div class="team-title">Top Secret</div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
