Finished uber effect, fixed up navbar dropdown (sort of), added remaining sponsors

--- a/index.html
+++ b/index.html
@@ -25,26 +25,24 @@ layout: default
     <div class="section-body">
     <!-- Uber hover effect -->
       <div class="teams">
-        <div class="team-row first-row">
-          <div class="team-box art">
-            <a href="/teams/art">ART</a>
-          </div>
-          <div class="team-box combat">
-            <a href="/teams/combat">Combat</a>
-          </div>
-          <div class="team-box three-d-p">
-            <a href="/teams/3dp">3-D Printing</a>
-          </div>
+        <div class="team-row">
+          <a href="/teams/art" class="team-box art">
+            <div class="team-title">ART</div>
+          </a>
+          <a href="/teams/combat" class="team-box combat">
+            <div class="team-title">Combat</div>
+          </a>
+          <a href="/teams/3dp" class="team-box three-d-p">
+            <div class="team-title">3-D Printing</div>
+          </a>
         </div>
-        <div class="team-row second-row">
-          <div class="team-box sumo">
-            <a href="/teams/sumo">Sumo</a>
-          </div>
-          <div class="team-box topsecret">
-            <a href="/teams/shhh">
+        <div class="team-row">
+          <a href="/teams/sumo" class="team-box sumo">
+              <div class="team-title">Sumo</div>
+          </a>
+          <a href="/teams/shhh" class="team-box topsecret">
               <div class="team-title">Top Secret</div>
-            </a>
-          </div>
+          </a>
         </div>
       </div>
     </div>
