Carded, touches here and there (sponsors, added links to history, ART)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
     <div class="main-header">
       <h1>You can too.</h1>
     </div>
-    <div class="section-body">
+    <div class="section-body card">
       <p>Join us! Regardless of how much experience you have, we have a team for you.</p>
       <!-- EMAIL FORM -->
       {% include signup.html %}
