Added Soccer information

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@ layout: default
           <a href="/teams/sumo" class="team-box sumo">
               <div class="team-title">Sumo</div>
           </a>
+          <a href="/teams/soccer" class="team-box soccer">
+              <div class="team-title">Soccer</div>
+          </a>
           <a href="/teams/shhh" class="team-box topsecret">
               <div class="team-title">Top Secret</div>
           </a>
