--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -577,7 +577,7 @@ permalink: /hackathon/index.html
 	</section>
 
 	<footer>
-		{% include hackathonFooter.html %}
+		{% include HackathonFooter.html %}
 	</footer>
 
 	<!-- scrips -->
