fixed symlink bug

--- a/pages/codeOfConduct.html
+++ b/pages/codeOfConduct.html
@@ -7,7 +7,7 @@ permalink: /hackathon/codeOfConduct/index.html
 	<title>UTRA | Code of Conduct</title>
 
 	<!-- hackathon style sheet -->
-	<link rel="stylesheet" type="text/css" href="../../css/codeOfConduct.css">
+	<link rel="stylesheet" type="text/css" href="{{"./css/codeOfConduct.css" | absolute_url }}">
 
 	<!-- Font Awesome icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +22,7 @@ permalink: /hackathon/codeOfConduct/index.html
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 	<!-- javascript -->
-	<script type="text/javascript" src="../../resources/javascript/header.js" ></script>
+	<script type="text/javascript" src="{{"./resources/javascript/header.js" | absolute_url }}" ></script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -32,8 +32,8 @@ permalink: /hackathon/codeOfConduct/index.html
 	<header class="header header--noScroll">
 		<div class="logo logo--header">
 			<a href="{{ "/hackathon" | relative_url }}">
-				<img class="logo__desktop" src="../../Pictures/hackathon/Logo/utraLogoWhite.png" alt="UTRA"> 
-				<img class="logo__mobile" src="../../Pictures/hackathon/Logo/utraLogoWhiteMobile.png" alt="UTRA"> 
+				<img class="logo__desktop" src="{{"./Pictures/hackathon/Logo/utraLogoWhite.png" | absolute_url }}" alt="UTRA"> 
+				<img class="logo__mobile" src="{{"./Pictures/hackathon/Logo/utraLogoWhiteMobile.png" | absolute_url }}" alt="UTRA"> 
 			</a>
 		</div>
 
