--- a/pages/codeOfConduct.html
+++ b/pages/codeOfConduct.html
@@ -7,7 +7,7 @@ permalink: /hackathon/codeOfConduct/index.html
 	<title>UTRA | Code of Conduct</title>
 
 	<!-- hackathon style sheet -->
-	<link rel="stylesheet" type="text/css" href="../../css/codeOfConduct.css">
+	<link rel="stylesheet" type="text/css" href="/css/codeOfConduct.css">
 
 	<!-- Font Awesome icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +22,7 @@ permalink: /hackathon/codeOfConduct/index.html
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 	<!-- javascript -->
-	<script type="text/javascript" src="../../resources/javascript/header.js" ></script>
+	<script type="text/javascript" src="/resources/javascript/header.js" ></script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -31,18 +31,18 @@ permalink: /hackathon/codeOfConduct/index.html
 <body>
 	<header class="header header--noScroll">
 		<div class="logo logo--header">
-			<a href="{{ "/hackathon" | relative_url }}">
-				<img class="logo__desktop" src="../../Pictures/hackathon/Logo/utraLogoWhite.png" alt="UTRA"> 
-				<img class="logo__mobile" src="../../Pictures/hackathon/Logo/utraLogoWhiteMobile.png" alt="UTRA"> 
+			<a href="www.utra.ca/hackathon">
+				<img class="logo__desktop" src="/Pictures/hackathon/Logo/utraLogoWhite.png" alt="UTRA"> 
+				<img class="logo__mobile" src="/Pictures/hackathon/Logo/utraLogoWhiteMobile.png" alt="UTRA"> 
 			</a>
 		</div>
 
 		<nav class="mainMenu">
 			<div class="mainMenu__mobileNav">
-				<a class="codeOfConductBack" href="{{"/hackathon" | relative_url}}"><i class="mainMenu__mobileNavIcon ion-md-arrow-back"></i></a>
+				<a class="codeOfConductBack" href="www.utra.ca/hackathon"><i class="mainMenu__mobileNavIcon ion-md-arrow-back"></i></a>
 			</div>
 			<ul class="mainMenu__list">
-				<li class="mainMenu__menuItem"><a href="{{"/hackathon" | relative_url}}">Back to Hackathon</a></li>
+				<li class="mainMenu__menuItem"><a href="www.utra.ca/hackathon">Back to Hackathon</a></li>
 			</ul>
 		</nav>
 	</header>
