--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -7,7 +7,7 @@ permalink: /hackathon/index.html
 	<title>UTRA | Hackathon</title>
 
 	<!-- hackathon style sheet -->
-	<link rel="stylesheet" type="text/css" href="../css/hackathon.css">
+	<link rel="stylesheet" type="text/css" href="/css/hackathon.css">
 
 	<!-- Font Awesome icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +22,7 @@ permalink: /hackathon/index.html
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 	<!-- javascript -->
-	<script type="text/javascript" src="../resources/javascript/header.js" ></script>
+	<script type="text/javascript" src="/resources/javascript/header.js" ></script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -61,19 +61,19 @@ permalink: /hackathon/index.html
 			<div class="iconContainer">
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--design">
-						<img src="../Pictures/hackathon/design.png" alt="design">
+						<img src="/Pictures/hackathon/design.png" alt="design">
 					</div>
 					<p class="aboutIcon__text">Design</p>
 				</div>
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--build">
-						<img src="../Pictures/hackathon/build.png" alt="build">
+						<img src="/Pictures/hackathon/build.png" alt="build">
 					</div>
 					<p class="aboutIcon__text">Build</p>
 				</div>
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--inspire">
-						<img src="../Pictures/hackathon/inspire.png" alt="inspire">
+						<img src="/Pictures/hackathon/inspire.png" alt="inspire">
 					</div>
 					<p class="aboutIcon__text">Inspire</p>
 				</div>
@@ -550,7 +550,7 @@ permalink: /hackathon/index.html
 		<br>
 		<div class="sponsorList">
 			<a class="sponsorList__img sponsorList__img--utra" href="www.utra.ca">
-				<img src="../Pictures/hackathon/sponsors/UTRA.png" alt="University Of Toronto Robotics Association">
+				<img src="/Pictures/hackathon/sponsors/UTRA.png" alt="University Of Toronto Robotics Association">
 			</a>
 
 		</div>
@@ -561,27 +561,27 @@ permalink: /hackathon/index.html
 		<br>
 		<div class="sponsorList">
 			<a class="sponsorList__img" href="https://www.aoyue.eu/?___store=english&___from_store=english">
-				<img src="../Pictures/hackathon/sponsors/aoyue.jpg" alt="Aoyue">
+				<img src="/Pictures/hackathon/sponsors/aoyue.jpg" alt="Aoyue">
 			</a>
 			<a class="sponsorList__img" href="https://estimote.com/">
-				<img src="../Pictures/hackathon/sponsors/estimote.png" alt="Estimote">
+				<img src="/Pictures/hackathon/sponsors/estimote.png" alt="Estimote">
 			</a>
 			<a class="sponsorList__img" href="https://www.irobot.com/">
-				<img src="../Pictures/hackathon/sponsors/irobot.png" alt="irobot">
+				<img src="/Pictures/hackathon/sponsors/irobot.png" alt="irobot">
 			</a>
 			<a class="sponsorList__img" href="https://www.leapmotion.com/">
-				<img src="../Pictures/hackathon/sponsors/leap.png" alt="Leap">
+				<img src="/Pictures/hackathon/sponsors/leap.png" alt="Leap">
 			</a>
 
 		</div>
 	</section>
 
 	<footer>
-		{% include hackathonFooter.html %}
+		{% include HackathonFooter.html %}
 	</footer>
 
 	<!-- scrips -->
-	<script type="text/javascript" src="../resources/javascript/hackathon.js"></script>
+	<script type="text/javascript" src="/resources/javascript/hackathon.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQQ04VdU2UMEk81eM3kryWP4JrC65Lz5g&callback=initMap"
     async defer></script>
 
