finalized hackathon site

--- a/pages/codeOfConduct.html
+++ b/pages/codeOfConduct.html
@@ -31,7 +31,7 @@ permalink: /hackathon/codeOfConduct/index.html
 <body>
 	<header class="header header--noScroll">
 		<div class="logo logo--header">
-			<a href="www.utra.ca/hackathon">
+			<a href="http://www.utra.ca/hackathon">
 				<img class="logo__desktop" src="/Pictures/hackathon/Logo/utraLogoWhite.png" alt="UTRA"> 
 				<img class="logo__mobile" src="/Pictures/hackathon/Logo/utraLogoWhiteMobile.png" alt="UTRA"> 
 			</a>
@@ -39,10 +39,10 @@ permalink: /hackathon/codeOfConduct/index.html
 
 		<nav class="mainMenu">
 			<div class="mainMenu__mobileNav">
-				<a class="codeOfConductBack" href="www.utra.ca/hackathon"><i class="mainMenu__mobileNavIcon ion-md-arrow-back"></i></a>
+				<a class="codeOfConductBack" href="http://www.utra.ca/hackathon"><i class="mainMenu__mobileNavIcon ion-md-arrow-back"></i></a>
 			</div>
 			<ul class="mainMenu__list">
-				<li class="mainMenu__menuItem"><a href="www.utra.ca/hackathon">Back to Hackathon</a></li>
+				<li class="mainMenu__menuItem"><a href="http://www.utra.ca/hackathon">Back to Hackathon</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -73,6 +73,6 @@ permalink: /hackathon/codeOfConduct/index.html
 		<p>We expect participants to follow these rules at UtraHacks, Workshops and any related social events.</p>
 	</section>
 
-	<footer id="mainFooter">{% include HackathonFooter.html %}</footer>
+	<footer id="mainFooter">{% include hackathonFooter.html %}</footer>
 </body>
 </html>
