--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -567,7 +567,7 @@ permalink: /hackathon/index.html
 	</section>
 
 	<footer>
-		{% include HackathonFooter.html %}
+		{% include hackathonFooter.html %}
 	</footer>
 
 	<!-- scrips -->
