--- a/pages/codeOfConduct.html
+++ b/pages/codeOfConduct.html
@@ -58,7 +58,7 @@ permalink: /hackathon/codeOfConduct/index.html
 	</div>
 
 	<section class="section__codeOfConduct section--backgroundLightColor">
-		<p>Harassment includes offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, technology choices, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
+		<p>Harassment includes offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, technology choices, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcomed sexual attention and others.</p>
 
 		<p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
 
