Updated Hackathon html

--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -26,7 +26,14 @@ permalink: /hackathon/index.html
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="shortcut icon" type="image/x-icon" href="/Pictures/hackathon/hackathonWhiteLogo.png" />
+	<!-- Favicon stuff -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/Pictures/hackathon/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/Pictures/hackathon/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/Pictures/hackathon/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/Pictures/hackathon/favicon/site.webmanifest">
+	<link rel="mask-icon" href="/Pictures/hackathon/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 	<header class="header">{% include hackathonHeader.html %}</header>
@@ -126,7 +133,7 @@ permalink: /hackathon/index.html
 		<div class="timeTable">
 			<!-- 8 AM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">08:00</p>
+				<p class="timeTable__timeHeader">08:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -144,7 +151,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 9 AM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">09:00</p>
+				<p class="timeTable__timeHeader">09:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -175,7 +182,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 10 AM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">10:00</p>
+				<p class="timeTable__timeHeader">10:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -194,7 +201,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 11 AM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">11:00</p>
+				<p class="timeTable__timeHeader">11:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -205,7 +212,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 12 AM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">12:00</p>
+				<p class="timeTable__timeHeader">12:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -227,7 +234,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 1 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">13:00</p>
+				<p class="timeTable__timeHeader">13:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -246,7 +253,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 2 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">14:00</p>
+				<p class="timeTable__timeHeader">14:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -257,7 +264,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 3 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">15:00</p>
+				<p class="timeTable__timeHeader">15:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -268,7 +275,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 4 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">16:00</p>
+				<p class="timeTable__timeHeader">16:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -279,7 +286,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 5 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">17:00</p>
+				<p class="timeTable__timeHeader">17:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -290,7 +297,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 6 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">18:00</p>
+				<p class="timeTable__timeHeader">18:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -312,7 +319,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 7 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">19:00</p>
+				<p class="timeTable__timeHeader">19:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -331,7 +338,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 8 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">20:00</p>
+				<p class="timeTable__timeHeader">20:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -342,7 +349,7 @@ permalink: /hackathon/index.html
 			</div>
 			<!-- 9 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">21:00</p>
+				<p class="timeTable__timeHeader">21:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -353,7 +360,7 @@ permalink: /hackathon/index.html
 			</div>	
 			<!-- 10 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">22:00</p>
+				<p class="timeTable__timeHeader">22:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -369,7 +376,7 @@ permalink: /hackathon/index.html
 			</div>		
 			<!-- 11 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">23:00</p>
+				<p class="timeTable__timeHeader">23:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -383,7 +390,7 @@ permalink: /hackathon/index.html
 			</div>	
 			<!-- 12 PM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">24:00</p>
+				<p class="timeTable__timeHeader">24:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position1">
@@ -409,7 +416,7 @@ permalink: /hackathon/index.html
 			</div>		
 			<!-- 1 AM -->
 			<div class="timeTable__row">
-				<p class="timetimeTable__timeHeader">01:00</p>
+				<p class="timeTable__timeHeader">01:00</p>
 				<div class="timeTable__event">
 					<div class="timeTable__eventHorizontalLine"></div>
 					<div class="timeTable__eventMarkerWrapper timeTable__eventMarkerWrapper--position2">
@@ -441,13 +448,13 @@ permalink: /hackathon/index.html
 				<div class="QandA">
 					<h1 class="faq__question">Who is UTRA?</h1>
 					<div class="faq__answerWrapper">
-						<p class="faq__answer">UTRA stands for the University of Toronto Robotics Association. We are the largest active robotics group on campus. Our mission is to foster interests in robotics, and teach anybody who is interested all that they need to know to be able to contribute. We are currently running 5 sub-teams at varying technical skill levels, making it easy for both beginners and veterans to embrace their passion in robotics. Our 5 sub-teams include SUMO, RoboSoccer, Combat, Autonomous Rover Team (ART), and 3D Printing (3DP). Visit our website, <a class="faq_answerLink" href="http://www.utra.ca">www.utra.ca</a> for more information!</p>
+						<p class="faq__answer">UTRA stands for the University of Toronto Robotics Association. We are the largest active robotics group on campus. Our mission is to foster interests in robotics, and teach anybody who is interested all that they need to know to be able to contribute. We are currently running 5 sub-teams at varying technical skill levels, making it easy for both beginners and veterans to embrace their passion in robotics. Our 5 sub-teams include SUMO, RoboSoccer, Combat, Autonomous Rover Team (ART), and 3D Printing (3DP). Visit our website, <a class="faq__answerLink" href="http://www.utra.ca">www.utra.ca</a> for more information!</p>
 					</div>
 				</div>
 				<div class="QandA">
 					<h1 class="faq__question">When / Where is utraHacks?</h1>
 					<div class="faq__answerWrapper">
-						<p class="faq__answer">UtraHacks will be hosted at University of Toronto, on September 28th, 2018.</p>
+						<p class="faq__answer">UtraHacks will be hosted at the <a class="faq__answerLink" href="http://ceie.engineering.utoronto.ca/">Myhal centre</a> for engineering innovation and entrepreneurship at the University of Toronto, on November 3rd, 2018.</p>
 					</div>
 				</div>
 				<div class="QandA">
@@ -459,13 +466,13 @@ permalink: /hackathon/index.html
 				<div class="QandA">
 					<h1 class="faq__question">What hardware will be available?</h1>
 					<div class="faq__answerWrapper">
-						<p class="faq__answer">We will be posting a list of hardware shortly. Keep an eye on our Facebook Page!</p>
+						<p class="faq__answer">The full hardware list can be found <a class="faq__answerLink" href="https://docs.google.com/spreadsheets/d/1Khhe9n8cU5Hckc3oPFKaR6e0oZKxCdmFdHuO_va6v24/edit?usp=sharing">here</a>!</p>
 					</div>
 				</div>
 				<div class="QandA">
 					<h1 class="faq__question">Who can attend?</h1>
 					<div class="faq__answerWrapper">
-						<p class="faq__answer">Anyone, as long as you will 18 or older by September 2018, you are welcome to join us at UtraHacks. Form a team with your friends or come alone, and join us for an action-packed weekend of hacking, and building something amazing.</p>
+						<p class="faq__answer">Anyone, as long as you will 18 or older by November 2018, you are welcome to join us at UtraHacks. Form a team with your friends or come alone, and join us for an action-packed weekend of hacking, and building something amazing.</p>
 					</div>
 				</div>
 			</div>
@@ -500,7 +507,7 @@ permalink: /hackathon/index.html
 				<div class="QandA">
 					<h1 class="faq__question">Are you providing travel reimbursements?</h1>
 					<div class="faq__answerWrapper">
-						<p class="faq__answer">We have a limited number of travel stipends available for individuals facing difficult circumstances. If you believe you fall under this category, send us an <a class="faq_answerLink" href="mailto:hackathon.expense@utra.ca">hackathon.expense@utra.ca</a> explaining your situation, expense amount and why you should be considered.</p>
+						<p class="faq__answer">We have a limited number of travel stipends available for individuals facing difficult circumstances. If you believe you fall under this category, send us an <a class="faq__answerLink" href="mailto:hackathon.expense@utra.ca">hackathon.expense@utra.ca</a> explaining your situation, expense amount and why you should be considered.</p>
 					</div>
 				</div>	
 			</div>
@@ -509,7 +516,7 @@ permalink: /hackathon/index.html
 				<div class="QandA">
 					<h1 class="faq__question">What should I bring?</h1>
 					<div class="faq__answerWrapper">
-						<p class="faq__answer">You’ll need to bring a laptop, chargers, and anything else that you need to hack with! You’ll also need to bring your student card to check-in and a government-issued ID, if you plan to borrow any hardware. If you are bringing your own hardware, please let us know through our <a class="faq_answerLink" href="mailto:hackinfo@utra.ca">hackinfo@utra.ca</a>. Lastly, if you wish to stay overnight, don’t forget to bring you sleeping bags, toiletries, and comfortable clothes!</p>
+						<p class="faq__answer">You’ll need to bring a laptop, chargers, and anything else that you need to hack with! You’ll also need to bring your student card to check-in and a government-issued ID, if you plan to borrow any hardware. If you are bringing your own hardware, please let us know through our <a class="faq__answerLink" href="mailto:hackinfo@utra.ca">hackinfo@utra.ca</a>. Lastly, if you wish to stay overnight, don’t forget to bring you sleeping bags, toiletries, and comfortable clothes!</p>
 					</div>
 				</div>	
 				<div class="QandA">
@@ -534,7 +541,7 @@ permalink: /hackathon/index.html
 				<div class="QandA">
 					<h1 class="faq__question">Other questions?</h1>
 					<div class="faq__answerWrapper">
-						<p class="faq__answer">We’d be happy to help!  Send the inquiry over to <a class="faq_answerLink" href="mailto:hackinfo@utra.ca">hackinfo@utra.ca</a> and we’ll answer it right away! :)</p>
+						<p class="faq__answer"><p class="faq__answer">We’d be happy to help!  Send the inquiry over to <a class="faq__answerLink" href="mailto:hackinfo@utra.ca">hackinfo@utra.ca</a> and we’ll answer it right away! :)</p>
 					</div>
 				</div>	
 			</div>
@@ -546,10 +553,20 @@ permalink: /hackathon/index.html
 		<h1 class="onePagerSection__subtitle">Hosted by</h1>
 		<div class="sponsorList">
 			<a class="sponsorList__img sponsorList__img--utra" href="http://www.utra.ca">
-				<img src="/Pictures/hackathon/sponsors/UTRA.png" alt="University Of Toronto Robotics Association">
+				<img src="{{ site.baseurl }}/assets/img/hackathonIcons/sponsors/UTRA.png" alt="University Of Toronto Robotics Association">
 			</a>
 		</div>
 		<h1 class="onePagerSection__subtitle onePagerSection__subtitle--sponsors">Sponsored by</h1>
+		<!-- Group A -->
+		<div class="sponsorList sponsorList--bigLogos">
+			<a class="sponsorList__img" href="https://digilab.dremel.com/">
+				<img src="/Pictures/hackathon/sponsors/Dremel-Digilab.png" alt="Dremel">
+			</a>
+			<a class="sponsorList__img sponsorList__img--leap" href="https://www.leapmotion.com/">
+				<img src="/Pictures/hackathon/sponsors/leap.png" alt="Leap">
+			</a>
+		</div>
+		<!-- Group B -->
 		<div class="sponsorList">
 			<a class="sponsorList__img" href="https://www.aoyue.eu/?___store=english&___from_store=english">
 				<img src="/Pictures/hackathon/sponsors/aoyue.jpg" alt="Aoyue">
@@ -560,8 +577,11 @@ permalink: /hackathon/index.html
 			<a class="sponsorList__img" href="https://www.irobot.com/">
 				<img src="/Pictures/hackathon/sponsors/irobot.png" alt="irobot">
 			</a>
-			<a class="sponsorList__img" href="https://www.leapmotion.com/">
-				<img src="/Pictures/hackathon/sponsors/leap.png" alt="Leap">
+			<a class="sponsorList__img" href="https://www.google.com/">
+				<img src="/Pictures/hackathon/sponsors/google.png" alt="Google">
+			</a>
+			<a class="sponsorList__img" href="http://toronto.thepint.ca/">
+				<img src="/Pictures/hackathon/sponsors/pintlogo.png" alt="Pint">
 			</a>
 		</div>
 	</section>
@@ -572,7 +592,7 @@ permalink: /hackathon/index.html
 
 	<!-- scrips -->
 	<script type="text/javascript" src="/resources/javascript/hackathon.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQQ04VdU2UMEk81eM3kryWP4JrC65Lz5g&callback=initMap"
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQQ04VdU2UMEk81eM3kryWP4JrC65Lz5g&libraries=places&callback=initMap"
     async defer></script>
 
 </body>
