--- a/pages/codeOfConduct.html
+++ b/pages/codeOfConduct.html
@@ -26,7 +26,14 @@ permalink: /hackathon/codeOfConduct/index.html
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- <link rel="shortcut icon" type="image/x-icon" href="../../Pictures/h/assets/imghackathonicons/hackathonWhiteLogo.png" /> -->
+	<!-- Favicon stuff -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/Pictures/hackathon/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/Pictures/hackathon/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/Pictures/hackathon/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/Pictures/hackathon/favicon/site.webmanifest">
+	<link rel="mask-icon" href="/Pictures/hackathon/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 	<header class="header header--noScroll">
