--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -560,7 +560,7 @@ permalink: /hackathon/index.html
 		<!-- Group A -->
 		<div class="sponsorList sponsorList--bigLogos">
 			<a class="sponsorList__img" href="https://digilab.dremel.com/">
-				<img src="/Pictures/hackathon/sponsors/Dremel-Digilab.png" alt="Dremel">
+				<img src="/Pictures/hackathon/sponsors/Dremel-Digilab.png" alt="Dremel-Digilab">
 			</a>
 			<a class="sponsorList__img sponsorList__img--leap" href="https://www.leapmotion.com/">
 				<img src="/Pictures/hackathon/sponsors/leap.png" alt="Leap">
