Updated UTRA logo link

--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -553,7 +553,7 @@ permalink: /hackathon/index.html
 		<h1 class="onePagerSection__subtitle">Hosted by</h1>
 		<div class="sponsorList">
 			<a class="sponsorList__img sponsorList__img--utra" href="http://www.utra.ca">
-				<img src="{{ site.baseurl }}/assets/img/hackathonIcons/sponsors/UTRA.png" alt="University Of Toronto Robotics Association">
+				<img src="/Pictures/hackathon/sponsors/UTRA.png" alt="University Of Toronto Robotics Association">
 			</a>
 		</div>
 		<h1 class="onePagerSection__subtitle onePagerSection__subtitle--sponsors">Sponsored by</h1>
