--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -7,7 +7,7 @@ permalink: /hackathon/index.html
 	<title>UTRA | Hackathon</title>
 
 	<!-- hackathon style sheet -->
-	<link rel="stylesheet" type="text/css" href="/css/hackathon.css">
+	<link rel="stylesheet" type="text/css" href=/css/hackathon.css">
 
 	<!-- Font Awesome icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -52,7 +52,7 @@ permalink: /hackathon/index.html
 		<div class="bannerImage__background"></div>
 		<div class="bannerImage__bannerImage__hackathonTextBlock">
 			<div class="textBlock__hackathonTitle">UtraHacks 2018</div>
-			<div class="textBlock__hackathonDate">2018/11/03 - 2018/11/03</div>
+			<div class="textBlock__hackathonDate">Saturday November 3, 2018</div>
 			<div id="hackathonCounter" class="textBlock__hackathonCountdown">Start Hacking in...</div>
 			<div class="buttonBlock">
 				<a href="https://utrahacks2018.typeform.com/to/h1PelD"><div class="buttonBlock__twoCol">Register</div></a>
@@ -68,24 +68,24 @@ permalink: /hackathon/index.html
 			<div class="iconContainer">
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--design">
-						<img src="/Pictures/hackathon/design.png" alt="design">
+						<img src="/Pictures/hackathon/design.png/design.png" alt="design">
 					</div>
 					<p class="aboutIcon__text">Design</p>
 				</div>
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--build">
-						<img src="/Pictures/hackathon/build.png" alt="build">
+						<img src="/Pictures/hackathon/design.png/build.png" alt="build">
 					</div>
 					<p class="aboutIcon__text">Build</p>
 				</div>
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--inspire">
-						<img src="/Pictures/hackathon/inspire.png" alt="inspire">
+						<img src="/Pictures/hackathon/design.png/inspire.png" alt="inspire">
 					</div>
 					<p class="aboutIcon__text">Inspire</p>
 				</div>
 			</div>
-			<p class="aboutFlexContainer__content">2018 is UTRA’s first year hosting this event. Following UTRA’s mission - to foster creativity and innovation, and cultivate science and technology leaders of the future by providing students with the opportunities to design and build advanced robotic technologies. The team started planning for this event with a mindset of “Design, Build, Inspire”. Without limitation on the design scope, we believe this event could bring a variety of brilliant ideas and creative minds together. 17 hours of hacking is a short time for a fully functional and manufacturable product, but ideas and prototypes are always where future technologies start at. </p>
+			<p class="aboutFlexContainer__content">2018 is UTRA’s first year hosting this event. Following UTRA’s mission - to foster creativity and innovation, and cultivate science and technology leaders of the future by providing students with the opportunities to design and build advanced robotic technologies. The team started planning for this event with a mindset of “Design, Build, Inspire”. Without limitation on the design scope, we believe this event could bring a variety of brilliant ideas and creative minds together. 13 hours of hacking is a short time for a fully functional and manufacturable product, but ideas and prototypes are always where future technologies start at. </p>
 			<p class="aboutFlexContainer__content">In this event, student teams are required to build a physical prototype within the given time, then pitch to the judges. Judging of the event is based on a few criterias including functionality, innovativity, and most importantly, real-world potential.</p>
 		</div>
 	</section>
@@ -555,15 +555,24 @@ permalink: /hackathon/index.html
 			<a class="sponsorList__img sponsorList__img--utra" href="http://www.utra.ca">
 				<img src="/Pictures/hackathon/sponsors/UTRA.png" alt="University Of Toronto Robotics Association">
 			</a>
+			<a class="sponsorList__img sponsorList__img--MIE" href="https://www.mie.utoronto.ca/">
+				<img src="/Pictures/hackathon/sponsors/MIE.jpg" alt="University Of Toronto Department of Mechanical and Industrial Engineering">
+			</a>
 		</div>
 		<h1 class="onePagerSection__subtitle onePagerSection__subtitle--sponsors">Sponsored by</h1>
 		<!-- Group A -->
 		<div class="sponsorList sponsorList--bigLogos">
-			<a class="sponsorList__img" href="https://digilab.dremel.com/">
-				<img src="/Pictures/hackathon/sponsors/Dremel-Digilab.png" alt="Dremel-Digilab">
+			<a class="sponsorList__img sponsorList__img--dremel" href="https://digilab.dremel.com/">
+				<img src="/Pictures/hackathon/sponsors/Dremel-Digilab.png" alt="Dremel">
 			</a>
 			<a class="sponsorList__img sponsorList__img--leap" href="https://www.leapmotion.com/">
 				<img src="/Pictures/hackathon/sponsors/leap.png" alt="Leap">
+			</a>
+			<a class="sponsorList__img sponsorList__img--particle" href="https://www.particle.io/">
+				<img src="/Pictures/hackathon/sponsors/particle.png" alt="Particle">
+			</a>
+			<a class="sponsorList__img" href="https://www.fdmgroup.com/en-ca/ca-home/">
+				<img src="/Pictures/hackathon/sponsors/FDM group.jpg" alt="FDM Group">
 			</a>
 		</div>
 		<!-- Group B -->
