--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -7,7 +7,7 @@ permalink: /hackathon/index.html
 	<title>UTRA | Hackathon</title>
 
 	<!-- hackathon style sheet -->
-	<link rel="stylesheet" type="text/css" href=/css/hackathon.css">
+	<link rel="stylesheet" type="text/css" href="/css/hackathon.css">
 
 	<!-- Font Awesome icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
