Minor Link Change

--- a/pages/hackathon.html
+++ b/pages/hackathon.html
@@ -68,19 +68,19 @@ permalink: /hackathon/index.html
 			<div class="iconContainer">
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--design">
-						<img src="/Pictures/hackathon/design.png/design.png" alt="design">
+						<img src="/Pictures/hackathon/design.png" alt="design">
 					</div>
 					<p class="aboutIcon__text">Design</p>
 				</div>
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--build">
-						<img src="/Pictures/hackathon/design.png/build.png" alt="build">
+						<img src="/Pictures/hackathon/design.png" alt="build">
 					</div>
 					<p class="aboutIcon__text">Build</p>
 				</div>
 				<div class="aboutIcon">
 					<div class="aboutIcon__img aboutIcon__img--inspire">
-						<img src="/Pictures/hackathon/design.png/inspire.png" alt="inspire">
+						<img src="/Pictures/hackathon/design.png" alt="inspire">
 					</div>
 					<p class="aboutIcon__text">Inspire</p>
 				</div>
